Activated new-year timer (#7)
